added css, started javascript

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <input type="text" id="input-el">
+        <div id="calc">
+            <input type="text" id="input-el">
         <div id="calc-buttons-div">
             <div class="button-row">
                 <button class="num-button" id="7-but">7</button>
@@ -34,5 +35,7 @@
                 <button class="opr-button" id="add-but">+</button>
             </div>
         </div>
+        </div>
+        <script src="index.js"></script>
     </body>
 </html>
