added equals functionality

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>CP317 Project</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div id="calc">
-            <input type="text" id="input-el">
+            <input type="text" id="input-el" readonly="readonly">
         <div id="calc-buttons-div">
             <div class="button-row">
                 <button class="num-button" id="7-but">7</button>
@@ -36,6 +37,7 @@
             </div>
         </div>
         </div>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.7.0/math.js'></script>
         <script src="index.js"></script>
     </body>
 </html>
