--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         </div>
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.7.0/math.js'></script>
+        <script src='math.js'></script>
         <script src="index.js"></script>
     </body>
 </html>
