changed division symbol to '/'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <button class="num-button" id="7-but">7</button>
                 <button class="num-button" id="8-but">8</button>
                 <button class="num-button" id="9-but">9</button>
-                <button class="opr-button" id="div-but">÷</button>
+                <button class="opr-button" id="div-but">/</button>
                 
             </div>
             <div class="button-row">
